@@ -927,34 +927,6 @@ dfsch_object_t* dfsch_list_2_vector(dfsch_object_t* list){
   return vector;
 }
 
-// Native data
-/*
-dfsch_object_t* dfsch_make_native_data(void *data, 
-                                       dfsch_object_t *type){
-  object_t* n = make_object(NATIVE);
-  
-  n->data.native.type = type;
-  n->data.native.data = data;
-
-  return n;
-}
-void* dfsch_native_data(dfsch_object_t *object, dfsch_object_t* type){
-
-  if (!object || object->type!=NATIVE || object->data.native.type != type)
-    dfsch_throw("exception:invalid-type", dfsch_cons(type, object));
-  
-  return object->data.native.data;
-}
-dfsch_object_t* dfsch_native_data_type(dfsch_object_t *object){
-  if (!object || object->type!=NATIVE)
-    dfsch_throw("exception:invalid-type", dfsch_cons(NULL, object));
-
-  return object->data.native.type;
-
-  }*/
-
-
-
 char* dfsch_obj_write(dfsch_object_t* obj, int max_depth){
   if (!obj){
     return "()";
@@ -980,114 +952,6 @@ char* dfsch_obj_write(dfsch_object_t* obj, int max_depth){
   }
 
   return obj->type->write(obj, max_depth);
-
-  /*
-  switch (obj->type){
-  case NUMBER:
-    {
-      char  *s = GC_malloc(64);   
-      // 64 bytes should be enought, even for 128 bit machines ^_~
-      snprintf(s, 64, "%lf", obj->data.number);
-      return s;
-    }
-  case SYMBOL:
-    {
-      return stracpy(dfsch_symbol(obj));
-    }
-  case STRING:
-    return straquote(dfsch_string_to_cstr(obj));
-  case PRIMITIVE:
-    return "<native-code>";
-  case CLOSURE:
-    if (obj->data.closure.name){
-      str_list_t *l = sl_create();
-
-      sl_append(l, "<closure: ");
-      sl_append(l, dfsch_obj_write(obj->data.closure.name, max_depth-1));
-      sl_append(l, ">");
-      
-      return sl_value(l);
-    }
-    return "<closure>";
-  case MACRO:
-    {
-      str_list_t *l = sl_create();
-      
-      sl_append(l, "<macro: ");
-      sl_append(l, dfsch_obj_write(obj->data.macro, max_depth-1));
-      sl_append(l, ">");
-      
-      return sl_value(l);
-    }
-  case FORM:
-    {
-      str_list_t *l = sl_create();
-      
-      sl_append(l, "<special-form: ");
-      sl_append(l, dfsch_obj_write(obj->data.macro, max_depth-1));
-      sl_append(l, ">");
-      
-      return sl_value(l);
-    }
-  case NATIVE:
-    {
-      str_list_t *l = sl_create();
-      
-      sl_append(l, "<");
-      sl_append(l, dfsch_obj_write(obj->data.native.type, max_depth-1));
-      sl_append(l, ">");
-      
-      return sl_value(l);
-    }
-  case EXCEPTION:
-    {
-      str_list_t *l = sl_create();
-      
-      sl_append(l, "<exception: ");
-      sl_append(l, dfsch_obj_write(obj->data.exception.type, max_depth-1));
-      sl_append(l, " . ");
-      sl_append(l, dfsch_obj_write(obj->data.exception.data,
-                                   max_depth-1));
-      //sl_append(l, " @ ");
-      //sl_append(l, dfsch_obj_write(obj->data.exception.trace,
-      //                             max_depth-1));
-      sl_append(l, ">");
-      
-      return sl_value(l);
-    } 
-  case PAIR: 
-    // TODO: at least semi-iterative solution? 
-    {
-
-    }
-  case VECTOR:
-    {
-	str_list_t* l= sl_create();
-        size_t i;
-        
-        sl_append(l,"#(");
-
-        for(i = 0; i < obj->data.vector.length-1; ++i){
-          sl_append(l, dfsch_obj_write(obj->data.vector.data[i],
-                                          max_depth-1));
-          sl_append(l, " ");
-        }
-
-        sl_append(l, dfsch_obj_write(obj->data.vector.data
-                                        [obj->data.vector.length-1],
-                                        max_depth-1));
-
-        sl_append(l,")");
-        return sl_value(l);
-
-    }
-  default:
-    {
-      return "<unknown-object>";
-    }
-  }
-
-  */
 }
 char* dfsch_exception_write(dfsch_object_t* e){
   str_list_t *l = sl_create();
